fix(match2): header not displayed on mobile for big MS

--- a/stylesheets/commons/Brackets.less
+++ b/stylesheets/commons/Brackets.less
@@ -476,7 +476,7 @@
 		top: 50% !important;
 		max-height: 50vh;
 		width: auto !important;
-		transform: translateY( -50% );
+		transform: translateY( -40% );
 	}
 }
 
